fix the request to patch method
